SDK is fully tested and production-ready

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "strapi-nextgen-framework",
   "version": "0.1.0",
-  "description": "A high-performance, type-safe framework bridging Strapi CMS and Next.js with automatic cache management and dynamic rendering",
+  "description": "Production-ready, type-safe framework bridging Strapi v4 CMS and Next.js 14+ App Router with automatic cache management, Error Boundaries, and SEO optimization",
   "main": "./dist/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/index.d.ts",
@@ -35,17 +35,38 @@
   "keywords": [
     "strapi",
     "nextjs",
+    "next.js",
     "cms",
-    "headless",
+    "headless-cms",
     "graphql",
     "typescript",
     "react",
-    "framework",
+    "app-router",
     "isr",
-    "revalidation"
+    "seo",
+    "cache",
+    "revalidation",
+    "dynamic-zones",
+    "error-boundary",
+    "zod",
+    "validation",
+    "strapi-v4",
+    "next14",
+    "server-components",
+    "react-server-components",
+    "nextjs-server-components",
+    "strapi-cms",
+    "headless-cms-strapi",
+    "graphql-api",
+    "typescript-framework",
+    "react-framework",
+    "nextjs-framework",
+    "server-side-rendering",
+    "static-site-generation",
+    "incremental-static-regeneration"
   ],
-  "author": "Furkan Pasa",
-  "license": "MIT",
+  "author": "fuqom",
+  "license": "GPL-3.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/DDevFurkanPasa/NextGen.git"
