--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,json,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,json,md}\"",
     "test": "vitest run",
+    "test:unit": "vitest run --exclude src/**/__tests__/integration/**",
+    "test:integration": "vitest run src/**/__tests__/integration/**",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "docs": "typedoc --out docs src/index.ts",
-    "prepublishOnly": "npm run build && npm run test",
+    "prepublishOnly": "npm run build && npm run test:unit",
     "clean": "rimraf dist"
   },
   "keywords": [
@@ -86,6 +88,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
@@ -96,6 +100,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jsdom": "^27.1.0",
     "next": "^14.0.4",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
