--- a/package.json
+++ b/package.json
@@ -34,8 +34,25 @@
     "test:e2e:visual": "playwright test e2e/visual.spec.ts",
     "test:e2e:visual:update": "playwright test e2e/visual.spec.ts --update-snapshots",
     "test:e2e:visual:debug": "playwright test e2e/visual.spec.ts --debug",
+    "test:e2e:a11y": "playwright test e2e/accessibility.spec.ts",
+    "test:e2e:a11y:debug": "playwright test e2e/accessibility.spec.ts --debug",
+    "test:e2e:perf": "playwright test e2e/performance.spec.ts",
+    "test:e2e:perf:debug": "playwright test e2e/performance.spec.ts --debug",
+    "test:e2e:load": "playwright test e2e/load.spec.ts",
+    "test:e2e:load:debug": "playwright test e2e/load.spec.ts --debug",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
+    "test:coverage:ui": "vitest --coverage --ui",
+    "test:coverage:watch": "vitest watch --coverage",
+    "test:coverage:report": "vitest run --coverage && start coverage/index.html",
+    "benchmark": "npm run benchmark:lighthouse && npm run benchmark:bundle && npm run benchmark:memory",
+    "benchmark:lighthouse": "lhci autorun --config=lighthouserc.benchmark.json",
+    "benchmark:bundle": "node scripts/bundle-size-check.js",
+    "benchmark:memory": "node --expose-gc scripts/memory-benchmark.js",
+    "benchmark:parse": "node scripts/parse-lighthouse-results.js",
+    "benchmark:report": "node scripts/generate-performance-report.js",
+    "benchmark:check": "node scripts/check-performance-budget.js",
+    "analyze:bundle": "node scripts/bundle-size-check.js",
     "docs": "typedoc --out docs src/index.ts",
     "prepublishOnly": "npm run build && npm run test:unit",
     "clean": "rimraf dist"
@@ -91,9 +108,11 @@
   "dependencies": {
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
+    "strapi-nextgen-framework": "^0.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.0",
     "@playwright/test": "^1.56.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -108,8 +127,10 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^27.1.0",
+    "lighthouse": "^12.8.2",
     "next": "^14.0.4",
     "playwright": "^1.56.1",
+    "playwright-lighthouse": "^4.0.0",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
