--- a/docs/package.json
+++ b/docs/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.1",
     "typescript": "^5.3.3"
   }
 }
