--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,7 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.2.0",
     "next": "^14.0.4",
     "nextra": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
